# django-microservice-graphql

./: .pre-commit-config.yaml  Dockerfile  asgi.py  pyproject.toml  readme.md  settings.py
service/: schema.py
